--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "devDependencies": {
         "@popperjs/core": "^2.10.2",
         "@vitejs/plugin-vue": "^3.0.1",
-        "axios": "^0.27",
+        "axios": "^0.27.2",
         "bootstrap": "^5.2.1",
         "laravel-vite-plugin": "^0.6.0",
         "lodash": "^4.17.19",
@@ -17,6 +17,7 @@
         "vue": "^3.2.37"
     },
     "dependencies": {
+        "chart.js": "^4.5.0",
         "vue-router": "^4.1.5"
     }
 }
